<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="eu.livotov.zxscan.CheckoutActivity$PlaceholderFragment" >
    
    
    <LinearLayout
        android:id="@+id/order_summary_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/button" >
	    <TextView
	        android:id = "@+id/order_summary_heading"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:paddingTop="10dp"
	        android:paddingRight="10dp"
	        android:paddingLeft="10dp"
	        android:layout_margin="2dp"
	        android:textSize="16sp"
	        android:background="@color/white"
	        android:textColor="@color/text_color"
	        android:text="@string/order_summary_heading"
	        >
	    </TextView>
	    <LinearLayout 
	        android:id="@+id/order_summary_view"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_margin="2dp"
	        android:orientation="horizontal"
	        android:background="#fff"
	        android:padding="10dp"
	        >	       
	        <TextView android:id="@+id/order_total_items"
	            android:layout_weight="1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:textSize="18sp"
	            android:text="12 Items"
	            />
	         <TextView android:id="@+id/order_total_price"
	            android:layout_weight="1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:textColor="#DB9E36"
	            android:textSize="18sp"
	            android:text="2000rs"
	            />	        
	    </LinearLayout>
        <RadioGroup 
	         android:padding="5dp"
	        android:layout_marginTop="@dimen/activity_vertical_margin"
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    
		    <RadioButton android:id="@+id/radio_shop_pickup"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:layout_marginRight="10dp"
				android:layout_marginEnd="10dp"
		        android:textColor="@color/app_color"
		        android:text="@string/shop_pickup"
		        android:onClick="selectOrderRecieveing"
		        android:fontFamily="sans-serif-light"
		        />
		    <RadioButton android:id="@+id/radio_home_delivery"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:textColor="@color/app_color"
		        android:text="@string/home_delivery"
		        android:onClick="selectOrderRecieveing"
		        android:fontFamily="sans-serif-light"
		        />
		</RadioGroup>
	</LinearLayout>
	
    
    
    
    
    <LinearLayout
        android:id="@+id/address_details_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:visibility="gone"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical" >
    	<TextView
	        android:id = "@+id/address_details_heading"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:paddingTop="10dp"
	        android:paddingRight="10dp"
	        android:paddingLeft="10dp"
	        android:layout_margin="2dp"
	        android:textSize="16sp"
	        android:background="@color/white"
	        android:textColor="@color/text_color"
	        android:text="@string/address_detail_heading"
	       
	        ></TextView>
    	<TextView 
    	    android:id="@+id/shop_address_details"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:visibility="gone"
    	    android:padding="10dp"
    	    android:textSize="16sp"
    	    android:textColor="@color/text_color"
    	    android:text="City food center, 2nd cross rustam main road, rustambagh, old airport road , bangalore"/>
        
    	<LinearLayout 
    	    android:id="@+id/home_address_details" 
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="vertical"
    	    android:visibility="gone"
    	    >
		    <EditText
		       android:id="@+id/home_address_primary"
		       android:layout_width="match_parent"
		       android:layout_height="60dp"
		       android:hint="@string/address_input_hint"
		       android:ems="10"
		       android:textSize="14sp"
		       android:inputType="textCapWords|textMultiLine|textPostalAddress"
		       android:gravity="start|center"
		       android:layout_marginStart="5dp"
		       android:layout_marginEnd="5dp"
		       android:layout_marginRight="5dp"
		       android:layout_marginLeft="5dp"
		        >
		        <requestFocus />
		  	</EditText>
		  	<EditText 
            	android:id="@+id/home_address_locality"
            	android:layout_width="match_parent"
           		android:layout_height="wrap_content"
            	android:enabled="false"
            	android:inputType="textCapWords"
            	android:textSize="18sp"
	        	android:layout_marginBottom="@dimen/activity_vertical_margin"
	            android:text="xyz"
	            android:layout_marginStart="5dp"
		        android:layout_marginEnd="5dp"
		        android:layout_marginRight="5dp"
		        android:layout_marginLeft="5dp"
	            />
	  		
		     
  
	    </LinearLayout>
	    <RadioGroup 
		        android:id="@+id/payment_options_container"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation = "horizontal"
			    android:padding="5dp"
			    android:layout_marginTop="@dimen/activity_vertical_margin">
	    
				<RadioButton android:layout_weight="1"
			        android:id="@+id/pay_by_card"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/pay_online"
			       	android:textColor="@color/app_color"
			        android:layout_marginRight="10dp"
			        android:layout_marginEnd="10dp"
			        android:fontFamily="sans-serif-light"
			       />
			    <RadioButton android:layout_weight="1"
			        android:id="@+id/pay_by_cash"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/pay_cash"
			      	android:textColor="@color/app_color"
			        android:fontFamily="sans-serif-light"
			       />
			</RadioGroup>
  
  </LinearLayout>
  <Button
      android:id="@+id/confirm_order_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/button"
      android:textSize="20sp"
      android:visibility="gone"
      android:textColor="@color/app_color"
      android:fontFamily="sans-serif-light"
      android:text="@string/confirm_order"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:layout_gravity="bottom">
      
  </Button>
    
	
   
</LinearLayout>
