<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:card="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:id="@+id/cart_fragment_container"
               android:background="#fff">
    
	
	<RelativeLayout 
   	 	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin"
    	android:layout_marginBottom="44dp">
     

    	<ListView
    	    android:id="@+id/cart_item_list_view"
	        android:layout_height="match_parent"
	        android:layout_width="match_parent"
	        android:choiceMode="singleChoice"
	        android:background="#fff"/>
    
	</RelativeLayout>
	<LinearLayout 
	     android:id="@+id/empty_cart_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="-20dp"
         android:orientation="vertical"
         android:layout_gravity="center"
         android:padding="15dp"
         android:visibility="gone"
        >
	    <TextView 
	        android:text="@string/empty_cart_message"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#777"
	        android:textSize="22sp"/>
	    <Button 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="20dp"
	        android:background="@android:color/transparent"
	        android:src="@drawable/cart_grey"/>
	</LinearLayout>
	
	
	
	
	
	
	
	<LinearLayout 
	    android:layout_gravity="bottom"
	    android:id="@+id/cart_actions_container"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation = "horizontal"
	    android:padding="5dp"
	     >
    
	<Button android:layout_weight="1"
        android:id="@+id/save_cart_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_cart_list"
       	 android:textColor="@color/app_color"
       
        android:background="@drawable/button"
        android:layout_marginTop="20dp"
         android:layout_marginRight="10dp"
         android:layout_marginEnd="10dp"
         android:fontFamily="sans-serif-light"
       />
    <Button android:layout_weight="1"
        android:id="@+id/checkout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_string"
      	android:textColor="@color/app_color"
        android:background="@drawable/button"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
       />
	</LinearLayout>
	
	<Button
	    android:id="@+id/cart_import_button"
	    android:layout_width="60dp"
	    android:layout_height="60dp"
	    android:background="@drawable/button_round"
	    android:layout_gravity="bottom|end"
	    android:layout_marginRight="12dp"
	    android:text="+"
	    android:textColor="#fff"
	    android:textSize="36sp"
	    android:fontFamily="sans-serif-light"
	    android:layout_marginEnd="12dp"
	    android:layout_marginBottom="65dp">
	    
	</Button>
	

 </FrameLayout>
