<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout 
        	xmlns:android="http://schemas.android.com/apk/res/android"
     	    android:id="@+id/map_container"
     	    android:layout_width="fill_parent"
     	    android:layout_height="fill_parent" 
	        android:layout_margin="0dp"
	        android:orientation="vertical">
	        <fragment
	        android:name="com.google.android.gms.maps.SupportMapFragment"
	        android:id="@+id/mapFragment"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent" 
	              
	        />
			<LinearLayout
			    android:id="@+id/map_dialog"
			    android:background="@drawable/shadow"
			    android:orientation="vertical"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_margin="30dp">
			    <LinearLayout 
			        android:id="@+id/delivery_address_container"
			        android:orientation="vertical"
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        >
				    <LinearLayout android:id="@+id/input_box_container"
				        android:orientation="horizontal"
				        android:layout_width="match_parent"
				        android:layout_height="50dp"
				        android:background="#fff">
						<EditText android:layout_weight="2"
						    android:id="@+id/delivery_address_input"
						    android:layout_width="wrap_content"
						    android:layout_gravity="top"
						    android:background="#fff"
						    android:padding="5dp"
						    android:textSize="16sp"
						    android:layout_height="wrap_content"
						    android:hint="@string/address_input_hint"
						    android:inputType="textCapWords|textMultiLine|textPostalAddress">
						    <requestFocus />
						</EditText>
						<Button android:layout_weight="1"
						    android:id="@+id/setDeliveryLocation"
						    android:layout_width="wrap_content"
						    android:layout_height="wrap_content"
						    android:textColor="@color/app_color"
						    android:background="#fff"
						    android:padding = "5dp"
						    android:layout_margin="5dp"
						    android:text="@string/set_address"
						    
						    ></Button>
					</LinearLayout>
					<TextView
					    android:id="@+id/delivery_address_secondary"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"
					    android:textSize="14sp"
					    android:layout_gravity="bottom"
					    android:padding="5dp"
					    android:background="#fff"
					    android:textColor="@color/text_color"
					    ></TextView>
				</LinearLayout>
				<LinearLayout 
		            android:id="@+id/shop_details_view"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:onClick="showFullShopDetails"
		            android:orientation="horizontal"
		            android:background="#fff"
		            android:visibility="gone"
		            >
	            	
		            <LinearLayout 
		                android:id="@+id/shop_details_info"
		                android:layout_height="100dp"
		                android:layout_width="0dp"
		                android:padding="10dp"
		                android:layout_weight = "1"
		                android:background="#fff"
		                android:orientation="vertical">
		                 
		                <TextView
		                    android:id="@+id/shop_details_heading"
		                    android:layout_width="fill_parent"
		                    android:layout_height="wrap_content"
		                    android:textSize="19sp"
		                    android:textColor="@color/app_color"
		                    
		                    >
		                    </TextView>
		                 <TextView
		                     android:id="@+id/shop_details_description"
		                     android:layout_width="fill_parent"
		                     android:layout_height="wrap_content"
		                     android:textSize="16sp"
		                     android:textColor="@color/app_color"
		                    
		                    ></TextView>
		                
		            </LinearLayout>
		            	
    			
		           <Button android:id="@+id/startShop"
		               android:layout_width="wrap_content"
		               android:layout_height="wrap_content"
		               android:layout_margin="10dp"
		               android:text="@string/shop"
		               android:layout_gravity="center_vertical"
		              	android:textColor="@color/app_color"
		               android:background="@drawable/button"
		               android:visibility="invisible"
		              ></Button>
	        	</LinearLayout>
				
	        </LinearLayout>
			
	      
	       <LinearLayout 
	           android:id="@+id/delivery_dialog_container"
	           android:layout_height="wrap_content"
	           android:layout_width="wrap_content"
	           android:layout_marginTop="-40dp"
	           android:layout_gravity="center"
	           android:alpha="0.7"
	           android:orientation="vertical"
	           android:background="@drawable/button">
		      	       
	        </LinearLayout>
	        <ImageButton android:id="@+id/search_anchor_point"
		           android:contentDescription="@string/desc_image_button"
		           android:layout_gravity="center"
		           android:layout_height="wrap_content"
		           android:layout_width="wrap_content"
		           android:background="@drawable/home_small"
		           
		           >
	        </ImageButton>
	        
	        <ImageButton
	            android:id="@+id/address_selector"
	            android:contentDescription="@string/desc_image_button"
	            android:layout_gravity="bottom|end"
	            android:layout_margin="25dp"
	            android:src="@drawable/plus1"
	            android:alpha="0.85"
	            android:layout_height="60dp"
		        android:layout_width="60dp"
		        
		        android:background="@drawable/button_round"
			></ImageButton>
        </FrameLayout>
			

	 
    

